# django-grainy

./: .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  CHANGELOG.yaml  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  readthedocs.yml  search.html  setup.py  sitemap.xml  tox.ini
.github/workflows/: codeql.yml  tests.yml
Ctl/: requirements-docs.txt  requirements.txt
django_grainy/: admin.py  apps.py  backends.py  conf.py  const.py  decorators.py  fields.py  forms.py  helpers.py  models.py  util.py
django_grainy/migrations/: 0001_initial.py
django_grainy/static/grainy/: grainy.js
django_grainy_test/: admin.py  models.py  serializers.py  urls.py  views.py
django_grainy_test/migrations/: 0001_initial.py
docs/: examples.md  index.md  install.md  settings.md
examples/: add_permissions.py  add_permissions_from_set.py  check_permissions.py  custom_permission_holder.py  grainy_model.py  grainy_model_parent.py  grainy_rest_viewset.py  grainy_view.py  grainy_view_manual_a.py  grainy_view_manual_b.py  grainy_view_manual_c.py  index.html  model_permissions.py
examples/remote/provider/: urls.py
examples/remote/receiver/: permissions.py  usage.py
examples/settings/: grainy_django_op_to_flag_predefined.py  grainy_perm_choices_crud.py  grainy_perm_choices_predefined.py  grainy_perm_choices_predefined_rw.py
facsimile/: requirements-test.txt  requirements.txt
install/: index.html
search/: search_index.json
settings/: index.html
src/django_grainy/: admin.py  apps.py  backends.py  conf.py  const.py  decorators.py  exceptions.py  fields.py  forms.py  handlers.py  helpers.py  models.py  remote.py  rest.py  util.py
src/django_grainy/migrations/: 0001_initial.py
src/django_grainy/static/grainy/: grainy.js
src/django_grainy/templates/django_grainy/forms/widgets/: bitmask_select.html
src/django_grainy_test/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/django_grainy_test/migrations/: 0001_initial.py
tests/: conftest.py  django_grainy_test  test_backend.py  test_fields.py  test_helpers.py  test_manager.py  test_models.py  test_permissions.py  test_rest_framework.py  util.py
