[tool.poetry]
name = "django-grainy"
repository = "https://github.com/20c/django-grainy"
readme = "README.md"
version = "1.9.1.1"
description = "granular permissions for django"
authors = [ "20C <code@20c.com>",]
license = "LICENSE.txt"
classifiers = [
        "Development Status :: 4 - Beta",
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
]

packages = [
    { include = "django_grainy", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
grainy = ">=1.7.0,<2"
six = ">=1.11.0,<=2.0.0"
djangorestframework = ">=3.0,<4.0"
Django = ">=2.2,<4"

[tool.poetry.dev-dependencies]
# test
pytest = ">=6.0.1"
pytest-django = ">=3.8.0"
codecov = ">=2.0.5"
coverage = ">=4.1"
pytest-cov = ">=2.2.1"
tox = ">=2.3.1"


# lint
bandit = "^1.6.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = ">=1.0.0,<2.0.0"

# ctl
ctl = "^1.0.0"
jinja2 = "^2.11.2"
tmpl = "^0.3.0"

[tool.poetry.plugins."markdown.extensions"]
pymdgen = "pymdgen.md:Extension"

[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3