[tool.poetry]
name = "django-grainy"
repository = "https://github.com/20c/django-grainy"
readme = "README.md"
version = "2.0.0"
description = "granular permissions for django"
authors = [ "20C <code@20c.com>",]
license = "LICENSE.txt"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
]

packages = [
    { include = "django_grainy", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
grainy = ">=1.7.0,<2"
six = ">=1.11.0,<=2.0.0"
djangorestframework = ">=3.0,<4.0"
Django = ">=3.2,<5"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
# test
pytest = ">=6.0.1"
pytest-django = ">=3.8.0"
coverage = ">=4.1"
pytest-cov = ">=2.2.1"
tox = "^3.25.0"
tox-gh-actions = ">=2.9.1"


# lint
bandit = "^1.6.2"
black = "^22.1"
isort = "^5.7.0"
flake8 = "^3.8.4"
pre-commit = "^2.13.0"
pyupgrade = "^2.34.0"

# docs
markdown-include = ">=0.5"
mkdocs = "^1.2.3"

# ctl
ctl = "^1"
jinja2 = "^3"
tmpl = "^1"

[tool.poetry.plugins."markdown.extensions"]
pymdgen = "pymdgen.md:Extension"

[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3